--- a/css/styles.css
+++ b/css/styles.css
@@ -455,7 +455,7 @@ margin-right: 120px;
 .backdrop:not(.is-open) .modal {
     transform: translate(-50%, -50%) scale(1.5);
 }
-.close-modal {
+.close-modal-button {
     position: absolute;
     top: 24px;
     right: 24px;
@@ -472,8 +472,8 @@ margin-right: 120px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.close-modal:hover,
-.close-modal:focus {
+.close-modal-button:hover,
+.close-modal-button:focus {
     background-color: #404bbf;
     border: none; 
     fill: #ffffff;
