--- a/css/styles.css
+++ b/css/styles.css
@@ -476,6 +476,10 @@ margin-right: 120px;
 .close-modal-button:focus {
     background-color: #404bbf;
     border: none; 
+}
+
+.close-modal-button:hover .icon-close,
+.close-modal-button:focus .icon-close{
     fill: #ffffff;
 }
 .close-modal-icon {
@@ -545,9 +549,95 @@ margin-right: 120px;
 .text-comment:focus {
     border-color: #4D5AE5;
 }
+.text-comment::placeholder {
+color: rgba(46, 47, 66, 0.4);
+}
 .accent {
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
+}
+.agreement {
+    margin-bottom: 24px;
+}
+.label-agreement {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+.agreement-checkbox {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    margin-right: 8px;
+    fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.accent {
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+input[type='checkbox']:checked .label-agreement .agreement-checkbox {
+  border-radius: 2px;
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+.footer-input-title {
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+}
+.footer-form {
+    display: flex;
+}
+.footer-label-input {
+    gap: 24px;
+}
+.footer-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff; 
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: #ffffff;
+}
+.placeholder {
+    color: #ffffff;
+}
+.button-submit-footer {
+   min-width: 165px;
+   height: 40px;
+   display: flex;
+   justify-content: center; 
+   align-items: center;
+   font-family: "Roboto", sans-serif;
+   font-size: 16px;
+   font-weight: 500;
+   line-height: 1.5;
+   letter-spacing: 0.04em; 
+   color: #ffffff;
+   cursor: pointer;
+   background-color: #4D5AE5;
+   border: none;
+   border-radius: 4px; 
 }
