--- a/css/styles.css
+++ b/css/styles.css
@@ -431,8 +431,7 @@ margin-right: 120px;
     visibility: hidden;
     pointer-events: none;
     background-color:  rgba(46, 47, 66, 0.4);;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-                visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open {
     opacity: 1;
@@ -521,9 +520,10 @@ margin-right: 120px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .text-field:focus {
-    border-color: #4D5AE5;
+    
     fill: #4D5AE5; 
 }
+
 .field-icon {
     position: absolute;
     left: 16px;
@@ -531,6 +531,7 @@ margin-right: 120px;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .text-comment {
     width: 100%; 
     height: 120px;
@@ -604,9 +605,10 @@ color: rgba(46, 47, 66, 0.4);
 }
 .footer-form {
     display: flex;
-}
-.footer-label-input {
     gap: 24px;
+}
+.icon-send {
+    margin-left: 16px;
 }
 .footer-input {
     width: 264px;
