--- a/css/styles.css
+++ b/css/styles.css
@@ -497,6 +497,7 @@ margin-right: 120px;
 }
 .form-field-wrapper {
     margin-bottom: 8px;
+
 }
 .label-field {
     font-size: 12px;
@@ -520,8 +521,7 @@ margin-right: 120px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .text-field:focus {
-    
-    fill: #4D5AE5; 
+border-color: #4D5AE5;
 }
 
 .field-icon {
@@ -530,6 +530,12 @@ margin-right: 120px;
     top: 50%; 
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.field-icon:focus {
+    fill: #4D5AE5;
+}
+.form-field-wrapper-textarea {
+    margin-bottom: 18px;
 }
 
 .text-comment {
@@ -589,7 +595,7 @@ color: rgba(46, 47, 66, 0.4);
     text-decoration-skip-ink: none;
     color: #4d5ae5;
 }
-.input[type='checkbox']:checked .label-agreement .agreement-checkbox {
+.checkbox-input:checked + .label-agreement .agreement-checkbox {
   border-radius: 2px;
   background-color: #404bbf;
   border: none;
