--- a/css/styles.css
+++ b/css/styles.css
@@ -520,7 +520,7 @@ margin-right: 120px;
     outline: transparent; 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.text-field:focus {
+.text-field:focus  {
 border-color: #4D5AE5;
 }
 
@@ -531,7 +531,7 @@ border-color: #4D5AE5;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.field-icon:focus {
+.text-field:focus .field-icon {
     fill: #4D5AE5;
 }
 .form-field-wrapper-textarea {
@@ -608,13 +608,23 @@ input[type='checkbox']:checked + .label-agreement > .agreement-checkbox {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #ffffff;
+    margin-bottom: 16px;
 }
 .footer-form {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.footer-label-input {
     display: flex;
     gap: 24px;
 }
 .icon-send {
     margin-left: 16px;
+    fill: #ffffff;
 }
 .footer-input {
     width: 264px;
@@ -624,12 +634,12 @@ input[type='checkbox']:checked + .label-agreement > .agreement-checkbox {
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-    padding-left: 16px;
+    padding: 8px 16px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     color: #ffffff;
 }
-.placeholder {
+.footer-input::placeholder {
     color: #ffffff;
 }
 .button-submit-footer {
