--- a/css/styles.css
+++ b/css/styles.css
@@ -531,7 +531,7 @@ border-color: #4D5AE5;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.text-field:focus .field-icon {
+.text-field:focus + .field-icon {
     fill: #4D5AE5;
 }
 .form-field-wrapper-textarea {
@@ -621,6 +621,7 @@ input[type='checkbox']:checked + .label-agreement > .agreement-checkbox {
 .footer-label-input {
     display: flex;
     gap: 24px;
+    margin-right: 120px;
 }
 .icon-send {
     margin-left: 16px;
@@ -638,6 +639,7 @@ input[type='checkbox']:checked + .label-agreement > .agreement-checkbox {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     color: #ffffff;
+    margin-right: 80px;
 }
 .footer-input::placeholder {
     color: #ffffff;
