--- a/css/styles.css
+++ b/css/styles.css
@@ -433,7 +433,7 @@ margin-right: 120px;
     background-color:  rgba(46, 47, 66, 0.4);;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop.is-open {
+.backdrop.is-open{
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
@@ -594,12 +594,16 @@ color: rgba(46, 47, 66, 0.4);
     text-decoration: underline;
     text-decoration-skip-ink: none;
     color: #4d5ae5;
+    margin-left: 8px;
 }
 input[type='checkbox']:checked + .label-agreement > .agreement-checkbox {
   border-radius: 2px;
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
+}
+.footer-input-wrapper{
+    margin-left: 120px;
 }
 .footer-input-title {
     margin-bottom: 16px;
@@ -608,7 +612,7 @@ input[type='checkbox']:checked + .label-agreement > .agreement-checkbox {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #ffffff;
-    margin-bottom: 16px;
+    
 }
 .footer-form {
     display: flex;
@@ -621,7 +625,7 @@ input[type='checkbox']:checked + .label-agreement > .agreement-checkbox {
 .footer-label-input {
     display: flex;
     gap: 24px;
-    margin-right: 120px;
+    margin-right: 80px;
 }
 .icon-send {
     margin-left: 16px;
@@ -639,7 +643,7 @@ input[type='checkbox']:checked + .label-agreement > .agreement-checkbox {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     color: #ffffff;
-    margin-right: 80px;
+ 
 }
 .footer-input::placeholder {
     color: #ffffff;
