--- a/css/styles.css
+++ b/css/styles.css
@@ -664,4 +664,5 @@ input[type='checkbox']:checked + .label-agreement > .agreement-checkbox {
    background-color: #4D5AE5;
    border: none;
    border-radius: 4px; 
+   gap: 16px;
 }
